--- a/blank/components/tap-gui.yaml
+++ b/blank/components/tap-gui.yaml
@@ -10,6 +10,6 @@ metadata:
     'backstage.io/techdocs-ref': dir:.
 spec:
   type: service
-  lifecycle: production
+  lifecycle: production2
   owner: default-team
   system: tap-gui
