--- a/blank/groups/user-myminseok.yml
+++ b/blank/groups/user-myminseok.yml
@@ -4,7 +4,7 @@ metadata:
   name: myminseok
 spec:
   profile:
-    displayName: User
+    displayName:  myminseok
     email: myminseok@naver.com
     picture: https://avatars.dicebear.com/api/avataaars/guest@example.com.svg?background=%23fff
   memberOf: [default-team]
