--- a/blank/groups/user-myminseok.yml
+++ b/blank/groups/user-myminseok.yml
@@ -1,10 +1,10 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: myminseok
+  name: myminseok2
 spec:
   profile:
-    displayName:  myminseok
+    displayName:  myminseok2
     email: myminseok@naver.net
     picture: https://avatars.dicebear.com/api/avataaars/guest@example.com.svg?background=%23fff
   memberOf: [default-team]
