--- a/blank/groups/user-myminseok.yml
+++ b/blank/groups/user-myminseok.yml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: myminseok2
+  name: myminseok
 spec:
   profile:
     displayName:  myminseok2
