--- a/blank/groups/user-myminseok.yml
+++ b/blank/groups/user-myminseok.yml
@@ -5,6 +5,6 @@ metadata:
 spec:
   profile:
     displayName:  myminseok2
-    email: myminseok@naver.net
+    email: myminseok@naver.com
     picture: https://avatars.dicebear.com/api/avataaars/guest@example.com.svg?background=%23fff
   memberOf: [default-team]
