--- a/acc-manifest.yml
+++ b/acc-manifest.yml
@@ -1,7 +1,7 @@
 apiVersion: accelerator.apps.tanzu.vmware.com/v1alpha1
 kind: Accelerator
 metadata:
-  name: simple
+  name: my-simple-acc
   namespace: accelerator-system
 spec:
   git:
