--- a/blank/components/tap-gui.yaml
+++ b/blank/components/tap-gui.yaml
@@ -6,6 +6,7 @@ metadata:
   tags:
     - v1alpha1
   annotations:
+    backstage.tanzu.vmware.com/user.default.guest: 'catalog.entity.read,catalog.entity.update,catalog.entity.delete'
     'backstage.io/kubernetes-label-selector': 'app=backstage'
     'backstage.io/techdocs-ref': dir:.
 spec:
