--- a/blank/groups/user-myminseok.yml
+++ b/blank/groups/user-myminseok.yml
@@ -7,4 +7,4 @@ spec:
     displayName: myminseok
     email: myminseok@naver.com
     picture: https://avatars.dicebear.com/api/avataaars/guest@example.com.svg?background=%23fff
-  memberOf: [default-team]
+  memberOf: [devops-team]
